修改启动参数，GC调优